--- a/research.htm
+++ b/research.htm
@@ -75,7 +75,7 @@ link=blue vlink=purple style='tab-interval:.5in'>
   <div class=MsoNormal align=center style='text-align:center'> </div>
   <h2><b><span style='font-family:Arial'>Publications in Refereed Journals</span></b></h2>
   <p><strong>Li, J., C. Wang, Jim Q. Chen, and H.T. Khan, “The Role of Altruistic Behavior in Emergency Evacuation: A Simulation Study,” Journal of Infrastructure, Policy and Development, 8(10), September 25, 2024.</strong></p>
-  <p><strong>Wang, J. Jim Chen, S. Herath, Abu Hussein, and D. Kang, “Designing a Conversational Agent for Education Using a Personality-based Approach,” International Journal of Advanced Computer Science and Applications (IJACSA), June 30, 2024, Vol 15 Issue 6.</strong></p>
+  <p><strong>Wang, J. Jim Q. Chen, S. Herath, Abu Hussein, and D. Kang, “Designing a Conversational Agent for Education Using a Personality-based Approach,” International Journal of Advanced Computer Science and Applications (IJACSA), June 30, 2024, Vol 15 Issue 6.</strong></p>
   <p><strong>Li, Jianxun, M. B Iqbal K Lai, Jim Q. Chen, “A Probability-based Analysis Method for Demand Curve Estimation,” International Journal of Management Theory and Practices. Accepted October, 2021.</strong></p>
   <p><strong>Li, Jianxun, Jim Q. Chen, Weiqian Li, “A human vision system-based 
     approach to improve computing efficiency,” International Journal of Information 
