--- a/IS340syll_online5wks_25.htm
+++ b/IS340syll_online5wks_25.htm
@@ -133,7 +133,7 @@ font-family:Arial;color:blue'><br>
 <p><b><span style="font-family:Arial">3. Required textbook: </span></b>Essentials of Management Information Systems by Laudon &amp; Laudon &amp; Traver, 15th<font size="3">&nbsp;</font>Edition, Pearson 2024<span style="font-family: Arial">&nbsp;</span></p>
   <p><b><span style="font-family:Arial">4. Course Requirements</span></b><br>
     (1). No make-up exam will be given without legitimate excuse<br>
-    (2). No “I” (incomplete) grade will be assigned.<br>
+    (2). No I (incomplete) grade will be assigned.<br>
     (3). No late assignment will be accepted wihtout legitimate excuse.<br>
     (4). For team work, individual score = team work score adjusted by a peer 
     evaluation factor.<br>
