--- a/IS340syll_online5wks_25.htm
+++ b/IS340syll_online5wks_25.htm
@@ -229,9 +229,9 @@ font-family:Arial;color:blue'><br>
         <tr> 
           <td width="3%"><b><span style='font-family:Arial'>&nbsp; 1a</span></b></td>
           <td width="7%"><b><span style='font-family:Arial'>June 23-</span></b></td>
-          <td width="47%"><b><span style="font-family:Arial"> Ch. 1 Information Systems<br>
+          <td width="47%"><b><span style="font-family:Arial"> Introduction to Management Information Systems<br>
           </span></b></td>
-          <td width="43%"><b><span style="font-family: Arial">Ch1 Check out learning materials in D2L Content page</span></b></td>
+          <td width="43%"><b><span style="font-family: Arial">Ch1; Check out learning materials in D2L Content page</span></b></td>
         </tr>
         <tr> 
           <td><strong><b><span style='font-family:Arial'>&nbsp; </span></b>1b</strong></td>
