--- a/MSIA643Fall2025_New.htm
+++ b/MSIA643Fall2025_New.htm
@@ -100,14 +100,14 @@ font-family:Arial;color:blue'> 643 Database Security &amp; Auditing <o:p></o:p><
         <td><div align="center"><a href="http://www.stcloudstate.edu/~jchen"> 
             </a><a href="https://www.stcloudstate.edu/its/services/academic/">D2L 
             Brightspace Link </a><a href="http://web.stcloudstate.edu/qjchen"> 
-            &amp; Http://Web.StCloudState.edu/qjchen</a></div></td>
+        &amp; https://jchenxn.github.io/WebSpace</a></div></td>
         <td><div align="center"><a href="mailto:JChen@StCloudState.edu"><span style='font-family:
   Arial'>JChen@StCloudState.edu</span></a></div></td>
         <td><div align="center"><img src="images/LinkedIn.jpg" width="194" height="29"></div></td>
       </tr>
       <tr> 
         <td colspan="3"><div align="center"><strong>Zoom Office Hours</strong>: Mon. 
-            Wed.  12:00pm to 2:0 pm &amp; Tue, Thu. 1:00 to 3:00pm or by 
+            Wed.  12:00pm to 2:00 pm &amp; Tue, Thu. 2:00 to 4:00pm or by 
         appointment; Zoom ID : https://minnstate.zoom.us/j/9511044838</div></td>
       </tr>
     </table>
@@ -155,7 +155,7 @@ font-family:Arial;color:blue'> 643 Database Security &amp; Auditing <o:p></o:p><
       <td>10%</td>
     </tr>
     <tr>
-      <td>Article Presentation (AP)</td>
+      <td>Article Presentation (AP) -- Zoom recording in MP4 format</td>
       <td>5%</td>
     </tr>
     <tr>
@@ -177,17 +177,17 @@ font-family:Arial;color:blue'> 643 Database Security &amp; Auditing <o:p></o:p><
     projects. No late project/program is accepted unless you can provide official 
     document of the extreme situation that prevented you from completing your 
     project on time. No excuse is accepted after the project deadline.</p>
-  <p><b>Article Presentation(AP):</b>  Your group will be randomly assigned an article to study and make a presentation in-person or virtually. Your presentation is approximately 30 to 45 minutes. You are required to turn in a copy of your presentation slides before your presentation starts. </p>
+  <p><b>Article Presentation(AP):</b>  Your group will be randomly assigned an article to study and make a recoded video presentation.&nbsp; &nbsp;Your presentation is approximately 30 to 45 minutes and must be uploaded as a mp4 file before the deadline. See assignment due date in D2L.</p>
   <p><strong>Term Paper:</strong> Your group will write a research paper from a list of research topics provided by your professor. You may choose a topic of your own with your professor's prior approval. Check out the "How to Write Research Paper" document in the D2L Syllabus &amp; Documents module.&nbsp;<br>
     <br>
     <strong>Quizzes<span style='font-weight:normal'>:</strong> 
-    Quizzes are of multiple choices questions, code writing, and or short answer type. They cover assigned materials and reading articles.<br>
+    Quizzes are of multiple choices questions, code writing, and or short answer type. They cover assigned materials and reading articles. They are taken online with video monitoring.<br>
     <span style='font-weight:normal'>
   <o:p></o:p>
   <br>
   <strong>Exams</strong>: The  exam questions are</span><span style='font-weight:normal'>
   <o:p> of multiple choice, short answer type, and problem solving, which</o:p>
-  </span> cover the lecture materials, projects, and<strong>&nbsp; </strong>articles.</p>
+  </span> cover the lecture materials, projects, and<strong>&nbsp; </strong>articles.&nbsp;They are taken online with video monitoring</p>
   <p><b>6. <font face="Times New Roman, Times, serif"><strong><b><span style="font-family:Arial">Grade Appeals Policy</span></b></strong></font><span style="font-family:Arial"> </span></b><font face="Times New Roman, Times, serif"><br>
     Any student wishing to appeal a grade must submit a WRITTEN appeal (e.g., 
     email) within two (2) days after a disputed assignment is officially returned 
@@ -404,7 +404,7 @@ font-family:Arial;color:blue'> 643 Database Security &amp; Auditing <o:p></o:p><
   padding:6.0pt 6.0pt 6.0pt 6.0pt;height:31.5pt'> <p><b><span style='font-family:Arial'>Dec. 10&nbsp; &nbsp; </span></b></p></td>
       <td colspan=2 valign=top style='width:71.0%;border:inset black .75pt;
   padding:6.0pt 6.0pt 6.0pt 6.0pt;height:31.5pt'> <p><b><span style='font-family:Arial'>Final 
-      Exam: 5:00pm -- 6:30pm Dec. 10, 2024 Wed.&nbsp;&nbsp;</span></b></p></td>
+      Exam: 5:00pm -- 6:30pm Dec. 10, Wednesday, 2025, &nbsp;&nbsp;</span></b></p></td>
     </tr>
   </table>
 
@@ -448,7 +448,7 @@ font-family:Arial;color:blue'> 643 Database Security &amp; Auditing <o:p></o:p><
         </li>
       </ul>
       <p> For assistance with writing style and documentation, please visit St. Cloud 
-        State University's writing center, The Write Place, <a href="http://www.stcloudstate.edu/writeplace/">http://www.stcloudstate.edu/writeplace/</a> or the Online writing Lab of Purdue University at <a href="http://owl.english.purdue.edu/">http://owl.english.purdue.edu/</a></p>
+        State University's  <a href="https://stcloud.mywconline.com/">Writing Center</a> or the Online writing Lab of Purdue University at <a href="http://owl.english.purdue.edu/">http://owl.english.purdue.edu/</a></p>
       <p><strong>&nbsp; </strong><strong>&nbsp;The instructor reserves the right to change any of the above items and the course syllabus at any time during the course.</strong></p>
       <p>&nbsp;</p>
       <p>&nbsp;</p>
