--- a/bcis443_Fall_25.htm
+++ b/bcis443_Fall_25.htm
@@ -83,11 +83,11 @@ style='tab-interval:.5in'>
 font-family:Arial;color:blue'><strong><b><b><b><b><b><b><strong><img src="images/scsulogo.jpg" alt="scsu logo" width="90" height="83" align="left"></strong></b></b></b></b></b></b></strong></span><span style='font-size:13.5pt;
 font-family:Arial;color:blue'><strong>St. Cloud State University - Herberger </strong></span><span style='font-size:13.5pt;
 font-family:Arial;color:blue'><strong>Business School </strong><br>
-    Information Systems Department<br>
+    Information Systems Program<br>
     IS 443/543 sec. 01 Business Database Design, Implementation &amp; Security
     <o:p></o:p><br>
-    Spring 2025<br>
-    </span></b><strong> CH 494 on Tue. Thu. 11:00am -12:15pm</strong><b><span style='font-family:Arial'><br>
+    Fall 2025 Delivery Mode: Flexible<br>
+    </span></b><strong> Asynchronous online or in-person in CH 494 on Tue. Thu. 11:00am -12:15pm</strong><b><span style='font-family:Arial'><br>
     <br>
     INSTRUCTOR'S INFORMATION</span></b></p>
   <div class=MsoNormal align=center style='text-align:center'>
@@ -104,11 +104,11 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
             https://www.stcloudstate.edu/its/services/academic/</a></div></td>
         <td><div align="center"><a href="mailto:JChen@StCloudState.edu"><span style='font-family:
   Arial'>Jchen@StCloudState.edu</span></a></div></td>
-        <td><div align="center"><a href="http://web.stcloudstate.edu/qjchen">http://web.stcloudstate.edu/qjchen</a></div></td>
+        <td><div align="center"><a href="http://web.stcloudstate.edu/qjchen">https://jchenxn.github.io/WebSpace/</a></div></td>
       </tr>
       <tr> 
         <td colspan="3"><div align="center"><strong>Office Hours</strong>: Mon. 
-            Wed.  Fri. 12:00pm to 3:00 pm &amp; Tue 2:00 to 4:00pm or by 
+            Wed.  Fri. 12:00pm to 2:00 pm &amp; Tue 2:00 to 4:00pm or by 
         appointment;&nbsp;Zoom  ID: https://minnstate.zoom.us/j/9511044838</div></td>
       </tr>
     </table>
@@ -135,7 +135,7 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
       and be able to develop database applications using Oracle, MySQL 
   or other DBMS packages.</span></b></p>
   <p><b><span style='font-family:Arial'>3. Learning Outcomes: (A) Develop entity-relationship models tailored for business applications. (B) Apply normalization techniques to optimize database performance in a business context. (C) Implement cloud-based database solutions to support business processes. (D) Utilize Structured Query Language (SQL) to enforce business rules and maintain data integrity. (E) Implement data security protocols to protect sensitive information. In addition, graduate students: (F) Be able to critically evaluate and propose advanced database security strategies, including encryption, access control, and auditing, to mitigate risks in modern database systems.</span></b></p>
-  <p><b><span style='font-family:Arial'>4. </span></b><b><span style='font-family:Arial'>Required Textbook:Carlos Coronel and Steven Morris, <em>Database Systems: Design, Implementation, 
+  <p><b><span style='font-family:Arial'>4. </span></b><b><span style='font-family:Arial'>Required Textbook: Carlos Coronel and Steven Morris, <em>Database Systems: Design, Implementation, 
     and Management, 14th Edition</em>, Cambridge, MA<i>: </i>Cengage Learning, 
     2023</span></b>.</p>
   <p><b><span style='font-family:Arial'>5. Course Requirements</span></b></p>
@@ -244,25 +244,25 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">1</span></b></th>
-        <td><b><span style="font-family:Arial">Jan. 13-</span></b></td>
+        <td><b><span style="font-family:Arial">Aug. 25-</span></b></td>
         <td><b><span style="font-family:Arial"> Introduction to database design</span></b></td>
         <td><b><span style="font-family:Arial">Chapter 9 &amp; Videos</span></b></td>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">&nbsp;2</span></b></th>
-        <td><b><span style="font-family:Arial">Jan. 20-</span></b></td>
+        <td><b><span style="font-family:Arial">Sept.2-</span></b></td>
         <td><b><span style="font-family:Arial">Database Systems/Data Model; Quiz#1</span></b></td>
         <td><b><span style='font-family:Arial'>Chapter 1 &amp; Videos</span></b></td>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">3</span></b></th>
-        <td><b><span style="font-family:Arial">Jan. 27-</span></b></td>
+        <td><b><span style="font-family:Arial">Sept.8-</span></b></td>
         <td><b><span style="font-family:Arial">Relational Database Model </span></b></td>
         <td><b><span style='font-family:Arial'>Chapter 2, 3 &amp; Videos</span></b></td>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">&nbsp;4</span></b></th>
-        <td><b><span style="font-family:Arial">Feb. 3-</span></b></td>
+        <td><b><span style="font-family:Arial">Sept.15-</span></b></td>
         <td><b><span style="font-family:Arial">Entity-Relationship 
         (E-R) Modeling<span
   style="mso-spacerun: yes">&nbsp;&nbsp;</span></span></b></td>
@@ -271,14 +271,14 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">5</span></b></th>
-        <td><b><span style="font-family:Arial">Feb. 10-</span></b></td>
+        <td><b><span style="font-family:Arial">Sept.22-</span></b></td>
         <td><b><span style="font-family:Arial">Problem Solving Exercises; Group 
           Project Assigned; Exam 1</span></b></td>
         <td>&nbsp;</td>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">6</span></b></th>
-        <td><b><span style="font-family:Arial">Feb. 17-</span></b></td>
+        <td><b><span style="font-family:Arial">Sept. 29-</span></b></td>
         <td><b><span style="font-family:Arial">Normalization of Database Tables</span></b></td>
         <td><b><i>Exam1:Ch1,2,3,4,5,9<a style='mso-footnote-id:ftn2' href="#_ftn1"
   name="_ftnref2" title=""><span class=MsoFootnoteReference><span
@@ -290,7 +290,7 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">7</span></b></th>
-        <td><b><span style="font-family:Arial">Feb. 24-</span></b></td>
+        <td><b><span style="font-family:Arial">Oct.6-</span></b></td>
         <td><b><span style="font-family:Arial">Structured 
         Query Language (SQL) </span></b></td>
         <td><b><span style='font-family:Arial'>Chapter </span>7 &amp; <a href="Oracle_1.htm"> 
@@ -298,37 +298,37 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">&nbsp;8</span></b></th>
-        <td><b><span style="font-family:Arial">Mar. 3-</span></b></td>
-        <td><b><span style="font-family:Arial">Spring Break!</span></b></td>
+        <td><b><span style="font-family:Arial">Oct.13-</span></b></td>
+        <td><b><span style="font-family:Arial">&nbsp;SQL</span></b></td>
         <td><b><span style="font-family:Arial"> Videos</span></b></td>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">&nbsp;9</span></b></th>
-        <td><b><span style="font-family:Arial">Mar. 10-</span></b></td>
+        <td><b><span style="font-family:Arial">Oct.20-</span></b></td>
         <td><b><span style="font-family:Arial">SQL; Quiz#2</span></b></td>
         <td>&nbsp;</td>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">10</span></b></th>
-        <td><b><span style="font-family:Arial">Mar. 17-</span></b></td>
+        <td><b><span style="font-family:Arial">Oct.27-</span></b></td>
         <td><b><span style="font-family:Arial">SQL; </span><span style="font-family: Arial">Quiz#3</span></b></td>
         <td><b><span style="font-family:Arial">Chapter 8 &amp;  Videos</span></b></td>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">11</span></b></th>
-        <td><b><span style="font-family:Arial">Mar. 24-</span></b></td>
-        <td><b><span style="font-family:Arial">SQL</span></b></td>
+        <td><b><span style="font-family:Arial">Nov.3-</span></b></td>
+        <td><b><span style="font-family:Arial">PL/SQL</span></b></td>
         <td><b><span style="font-family:Arial"> Videos</span></b></td>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">12</span></b></th>
-        <td><b><span style="font-family:Arial">Mar. 31-</span></b></td>
-        <td><b><span style="font-family:Arial">Exam 2 / </span><span style="font-family: Arial">Oracle PL/SQL</span></b></td>
+        <td><b><span style="font-family:Arial">Nov.10-</span></b></td>
+        <td><b><span style="font-family:Arial">No class on Tue.; Exam 2 on Thursda </span><span style="font-family: Arial">&nbsp;</span></b></td>
         <td><b><span style="font-family:Arial"> Videos</span></b></td>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">13</span></b></th>
-        <td><b><span style="font-family:Arial">Apr. 7-</span></b></td>
+        <td><b><span style="font-family:Arial">Nov. 17-</span></b></td>
         <td><b><span style="font-family:Arial">Triggers for business rules</span></b></td>
         <td><b>Handout;<i>Exam2: Ch 6,7,8<a style='mso-footnote-id:ftn2' href="#_ftn2"
   name="_ftnref2" title=""><span class=MsoFootnoteReference><span
@@ -336,25 +336,25 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">14</span></b></th>
-        <td><b><span style="font-family:Arial">Apr. 14-</span></b></td>
+        <td><b><span style="font-family:Arial">Nov. 24-</span></b></td>
         <td><b><span style="font-family:Arial">Transaction Mgt and Concurrency 
-        Control</span></b></td>
+        Control; Thanksgivings Break From Wed.!</span></b></td>
         <td><b><a href="Oracle_2.htm">Tutorial 
         2 &amp; </a><span style="font-family:Arial"> Videos</span></b></td>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">15</span></b></th>
-        <td><b><span style="font-family:Arial">Apr. 21-</span></b></td>
+        <td><b><span style="font-family:Arial">Dec. 1-</span></b></td>
         <td><b><span style="font-family:Arial">Group Project Presentations</span></b></td>
         <td><b><span style="font-family:Arial">Chapter <a
   href="Cha10.ppt" target="_blank">10 &amp; </a> Videos</span></b></td>
       </tr>
       <tr>
         <th scope="row">Final Wk</th>
-        <td><b><span style="font-family:Arial">May 2 - May 7</span></b></td>
+        <td><b><span style="font-family:Arial">Dec. 10</span></b></td>
         <td colspan="2"><p><b><span style="font-family:Arial">Comprehensive 
         Final: <br>
-            </span></b><b><span style="font-family:Arial">10:00am - 11:30am, Friday, May 2, 2025. Total exam time: 1.5 hours<br>
+            </span></b><b><span style="font-family:Arial">3:00pm - 4:30pm, Thursday, Dec. 11, 2025. Total exam time: 1.5 hours<br>
             <br>
         </span></b></p></td>
       </tr>
@@ -372,12 +372,12 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
     <div style='mso-element:footnote' id=ftn1>
       <p class=MsoFootnoteText><a style='mso-footnote-id:ftn1' href="#_ftnref1"
 name="_ftn1" title=""><span class=MsoFootnoteReference><span style='mso-special-character:
-footnote'>[1] </span></span></a> Take DB On-line practice test one (on my websit<span style="font-family: Arial">e: web.stcloudstate.edu/qjchen</span>)</p>
+footnote'>[1] </span></span></a> Take DB On-line practice test one (on https://jchenxn.github.io/WebSpace/Practice_1)</p>
     </div>
     <div style='mso-element:footnote' id=ftn2>
       <p class=MsoFootnoteText><a style='mso-footnote-id:ftn2' href="#_ftnref2"
 name="_ftn2" title=""><span class=MsoFootnoteReference><span style='mso-special-character:
-footnote'> [2] </span></span></a> Take DB On-line practice test two (on my website); there is practice test three.</p>
+footnote'> [2] </span></span></a> Take DB On-line practice test two (on https://jchenxn.github.io/WebSpace/Practice_2); there is NO practice test three.</p>
       <p><strong>10. General  policies</strong></p>
       <ul>
         <li><strong>By signing up with this class, you agree to take quizzes and exams with D2L's Lockdown Browser and Respondus Monitor features.<br>
@@ -404,11 +404,9 @@ footnote'> [2] </span></span></a> Take DB On-line practice test two (on my websi
           accommodations. The accommodations authorized may be discussed with 
           your instructor. All discussions will remain confidential. </li>
       </ul>
-      <p>For  assistance with writing style and documentation, please visit St. Cloud State  University’s writing center, The Write Place, <a href="http://www.stcloudstate.edu/writeplace/">http://www.stcloudstate.edu/writeplace/</a> or the Online writing Lab of Purdue University at <a href="http://owl.english.purdue.edu/">http://owl.english.purdue.edu/</a></p>
-      <p><strong>11. COVID-19 Policies</strong> St. Cloud State University (SCSU), in coordination with state and local health departments, is closely monitoring the spread of COVID-19 and following the State of Minnesota’s laws and guidelines to keep everyone safe. We have developed a list of ways that all of us can participate to assure our campus is safe for living and learning. I expect that all of us will honor and respect ourselves and each other by following the “Keep the Pack Safe” guidelines in our classroom. As a reminder: (1) You may wear a face mask/covering in our classroom. (2) Wash your hands frequently and use the hand sanitizers available to you. Greet each other without shaking hands. (3) If you are not feeling well, do not come to class and get tested. You can contact me to make alternative arrangements.</p>
+      <p>For  assistance with writing style and documentation, please visit St. Cloud State  University writing center, https://stcloud.mywconline.com/ or the Online writing Lab of Purdue University at <a href="http://owl.english.purdue.edu/">http://owl.english.purdue.edu/</a>      </p>
       <blockquote>
-        <blockquote>
-          <p><strong>&nbsp;The instructor reserves the right to change any of the above items and the course syllabus at any time during the course.</strong></p>
+        <p><strong>&nbsp;The instructor reserves the right to change any of the above items and the course syllabus at any time during the course.</strong></p>
         </blockquote>
       
 <p><strong>&nbsp;</strong><br>
