--- a/IS340syll_online6wks_24.htm
+++ b/IS340syll_online6wks_24.htm
@@ -130,7 +130,7 @@ font-family:Arial;color:blue'><br>
     collect, retrieve, process, store, and disseminate information to the correct 
     organizational units in a timely manner; (4) discuss how information systems 
     are developed. </p>
-<p><b><span style="font-family:Arial">3. Required textbook: </span></b>Essentials of Management Information Systems by Laudon &amp; Laudon, 1<font size="3">4</font>th Edition, Pearson 2021</p>
+<p><b><span style="font-family:Arial">3. Required Textbook: </span></b>Essentials of Management Information Systems by Laudon &amp; Laudon, 1<font size="3">4</font>th Edition, Pearson 2021</p>
   <p><b><span style="font-family:Arial">4. Course Requirements</span></b><br>
     (1). No make-up exam will be given without legitimate excuse<br>
     (2). No “I” (incomplete) grade will be assigned.<br>
