Updated WebSpace files after Dreamweaver edits

--- a/bcis443_Fall_25.htm
+++ b/bcis443_Fall_25.htm
@@ -354,7 +354,7 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
         <td><b><span style="font-family:Arial">Dec. 10</span></b></td>
         <td colspan="2"><p><b><span style="font-family:Arial">Comprehensive 
         Final: <br>
-            </span></b><b><span style="font-family:Arial">3:00pm - 4:30pm, Thursday, Dec. 11, 2025. Total exam time: 1.5 hours<br>
+            </span></b><b><span style="font-family:Arial">3:00pm - 4:00pm, Thursday, Dec. 11, 2025. Total exam time: 1 hour<br>
             <br>
         </span></b></p></td>
       </tr>
