Updated WebSpace files after Dreamweaver edits

--- a/bcis443_Fall_25.htm
+++ b/bcis443_Fall_25.htm
@@ -184,11 +184,11 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
     No excuse is accepted after the project deadline.</p>
   <p><b>Group Projects: </b>You will work in groups of four to develop a database 
     system for a hypothetical business, whose descriptions will be given to you 
-    in the 5<sup>th</sup> week. You may form your own group or request to be assigned 
+    in the 5<sup>th</sup> week. You may form your own group if you attend the class in-person or request to be assigned 
     to a group after you get the group project assignment sheet. Your group will 
-    make an in-class presentation at the end of the semester to demonstrate your 
+    make an in-person or online presentation at the end of the semester to demonstrate your 
     system. The presentation is limited to about 20 minutes.Your individual group 
-    project score = group project score adjusted by a peer evaluation factor.  Graduate students will be doing an extra assignment as part of GP#1. Your second group project (GP#2) on PL/SQL coding is much smaller and carries less weight.</p>
+    project score = group project score adjusted by a peer evaluation factor.  Graduate students will be doing an extra assignment as part of GP#1. Unlike the first group project, the second group project  on PL/SQL coding is very small and does not require presentation.</p>
 
   <p><b>Exams &amp; Quizzes: </b>The examinatio<font face="Times New Roman, Times, serif">ns 
     cons</font>ist of multiple choice and short answer questions. Before taking 
@@ -198,10 +198,19 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
     two to four quizzes. The quizzes are multiple choice, problem solving or short answer type 
     questions. <b>No makeup test or quiz </b>is allowed.</p>
 
-  <h4><font face="Times New Roman, Times, serif">Class Participation: <span style='font-weight:normal'>You 
-    are expected to attend  class meetings and participate in classroom discussions in-person. Lecture videos and reading assignments for each week are listed in the course D2L course content modules or noted on the course syll<strong>ab</strong>us. 
-    Classroom discussions will assume you watched the lecture videos and read the assigned chapters. You will be called 
-    upon in class to answer questions.</span></font></h4>
+  <h4><font face="Times New Roman, Times, serif">Class Participation: </font>Participation is an important part of your learning in this Flexible delivery course. Because students may attend in person or study asynchronously, participation is assessed in the following ways:</h4>
+  <ul data-start="575" data-end="1225">
+    <li data-start="575" data-end="815">
+      <p data-start="577" data-end="815"><strong data-start="577" data-end="606">Studying Course Materials</strong>: D2L tracks your time and progress on course materials, including recorded lecture videos and weekly reading assignments. Your participation score is based primarily on your engagement with these materials.</p>
+    </li>
+    <li data-start="816" data-end="979">
+      <p data-start="818" data-end="979"><strong data-start="818" data-end="842">In-person Attendance</strong>: If you attend the class in person, your attendance at the designated class times will also be factored into your participation score.</p>
+    </li>
+    <li data-start="980" data-end="1225">
+      <p data-start="982" data-end="1225"><strong data-start="982" data-end="1007">Classroom Discussions</strong>: Whether in person or online, you are expected to come prepared by watching the lecture videos and completing the assigned readings. In class, you may be called upon to answer questions or contribute to discussions.</p>
+    </li>
+  </ul>
+  <p data-start="1227" data-end="1352">Participation is evaluated on your consistent effort to stay engaged with the course, not on the quantity of contributions.</p>
   <h4><font face="Times New Roman, Times, serif">6. Grade Appeals Policy:<br>
     It is the students' responsibility to keep a record of all grades&nbsp;earned on projects, quizzes, and exams (The professor's record of your grades 
     in D2L will be assumed to be accurate unless you can prove otherwise). Any 
@@ -323,7 +332,7 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">12</span></b></th>
         <td><b><span style="font-family:Arial">Nov.10-</span></b></td>
-        <td><b><span style="font-family:Arial">No class on Tue.; Exam 2 on Thursda </span><span style="font-family: Arial">&nbsp;</span></b></td>
+        <td><b><span style="font-family:Arial">No class on Tue.; Exam 2 on Thursday </span><span style="font-family: Arial">&nbsp;</span></b></td>
         <td><b><span style="font-family:Arial"> Videos</span></b></td>
       </tr>
       <tr>
@@ -345,7 +354,7 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">15</span></b></th>
         <td><b><span style="font-family:Arial">Dec. 1-</span></b></td>
-        <td><b><span style="font-family:Arial">Group Project Presentations</span></b></td>
+        <td><b><span style="font-family:Arial">Group Project Presentations Due</span></b></td>
         <td><b><span style="font-family:Arial">Chapter <a
   href="Cha10.ppt" target="_blank">10 &amp; </a> Videos</span></b></td>
       </tr>
