Updated WebSpace files after Dreamweaver edits

--- a/bcis443_Fall_25.htm
+++ b/bcis443_Fall_25.htm
@@ -283,19 +283,15 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
         <td><b><span style="font-family:Arial">Sept.22-</span></b></td>
         <td><b><span style="font-family:Arial">Problem Solving Exercises; Group 
           Project Assigned; Exam 1</span></b></td>
-        <td>&nbsp;</td>
+        <td><b><i>Exam1:Ch1,2,3,4,5,9<a
+  style='mso-footnote-id:ftn1' href="#_ftn1" name="_ftnref1" title=""><span
+  class=MsoFootnoteReference><span style='mso-special-character:footnote'> [1]</span></span></a></i></b><b><span style="font-family:Arial"> </span></b></td>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">6</span></b></th>
         <td><b><span style="font-family:Arial">Sept. 29-</span></b></td>
         <td><b><span style="font-family:Arial">Normalization of Database Tables</span></b></td>
-        <td><b><i>Exam1:Ch1,2,3,4,5,9<a style='mso-footnote-id:ftn2' href="#_ftn1"
-  name="_ftnref2" title=""><span class=MsoFootnoteReference><span
-  style='mso-special-character:footnote'> </span></span></a><a
-  style='mso-footnote-id:ftn1' href="#_ftn1" name="_ftnref1" title=""><span
-  class=MsoFootnoteReference><span style='mso-special-character:footnote'> [1]</span></span></a><a style='mso-footnote-id:ftn2' href="#_ftn2"
-  name="_ftnref2" title=""><span class=MsoFootnoteReference><span
-  style='mso-special-character:footnote'></span></span></a></i></b><b><span style="font-family:Arial"> Chapter 6 &amp; Videos<i>;</i></span></b></td>
+        <td><b><span style="font-family:Arial">Chapter 6 &amp; Videos<i>;</i></span></b></td>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">7</span></b></th>
@@ -333,15 +329,15 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
         <th scope="row"><b><span style="font-family:Arial">12</span></b></th>
         <td><b><span style="font-family:Arial">Nov.10-</span></b></td>
         <td><b><span style="font-family:Arial">No class on Tue.; Exam 2 on Thursday </span><span style="font-family: Arial">&nbsp;</span></b></td>
-        <td><b><span style="font-family:Arial"> Videos</span></b></td>
+        <td><b><i>Exam2: Ch 6,7,8<a style='mso-footnote-id:ftn2' href="#_ftn2"
+  name="_ftnref2" title=""><span class=MsoFootnoteReference><span
+  style='mso-special-character:footnote'>[2]</span></span></a></i></b></td>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">13</span></b></th>
         <td><b><span style="font-family:Arial">Nov. 17-</span></b></td>
         <td><b><span style="font-family:Arial">Triggers for business rules</span></b></td>
-        <td><b>Handout;<i>Exam2: Ch 6,7,8<a style='mso-footnote-id:ftn2' href="#_ftn2"
-  name="_ftnref2" title=""><span class=MsoFootnoteReference><span
-  style='mso-special-character:footnote'>[2]</span></span></a></i></b></td>
+        <td><b>Handout;<span style="font-family:Arial">Videos</span></b></td>
       </tr>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">14</span></b></th>
