Updated WebSpace files after Dreamweaver edits

--- a/MSIA643.htm
+++ b/MSIA643.htm
@@ -19,7 +19,7 @@
   and include<br>
   your VM info and error description in your email.</h4>
 <h4><br>
-  <img src="images/star.gif" width="37" height="28"><a href="MSIA643Fall2025_New.htm">Syllabus 
+  <img src="images/star.gif" width="37" height="28"><a href="MSIA643Fall2025_New_Asyn.htm">Syllabus 
   </a><img src="images/star.gif" alt="" width="37" height="28"><a href="IA643ResearchPaper.docx">How 
   to write a research paper</a> <img src="images/star.gif" alt="" width="37" height="28"><a href="APA_Format.pdf">APA 
   Format</a> <img src="images/star.gif" alt="" width="37" height="28"><a href="APA Reference_Citation_Examples.doc" target="_self">APA 
