--- a/BCIS443.htm
+++ b/BCIS443.htm
@@ -12,11 +12,11 @@
   and techniques such as E.R.M. and normalization. Oracle 19c is used to demonstrate 
   database implementation. Great emphasis is placed on using triggers to enforce 
 business rules during implementation.</p>
-<p><img src="images/star.gif" width="37" height="28"><a href="bcis443_Fall_25.htm" target="_self">Syllabus Fall 2025&nbsp; &nbsp;&nbsp;</a><img src="images/star.gif" width="37" height="28"><a href="https://livesql.oracle.com/apex/livesql/file/index.html#"></a><a href="bcis443_Fall_25.htm" target="_self">&nbsp;</a> <img src="images/star.gif" width="37" height="28"><a href="https://livesql.oracle.com/apex/livesql/file/index.html#">Free 
+<p><img src="images/star.gif" width="37" height="28"><a href="bcis443_Fall_25_Flexible.htm" target="_self">Syllabus Fall 2025&nbsp; &nbsp;&nbsp;</a><img src="images/star.gif" width="37" height="28"><a href="https://livesql.oracle.com/apex/livesql/file/index.html#"></a><a href="https://livesql.oracle.com/apex/livesql/file/index.html#">Free 
   Oracle Live SQL</a><br>
   <img src="images/star.gif" width="37" height="28"> <a href="https://jchenxn.github.io/WebSpace/Practice_1">Database 
    practice test 1</a> <img src="images/star.gif" width="37" height="28"><a href="https://jchenxn.github.io/WebSpace/Practice_2">Database 
-   practice test 2</a>&nbsp;&nbsp; <img src="images/star.gif" alt="Peer Evaluation Form" width="37" height="28"><a href="Peer Evaluation FORM IS443.doc">Peer 
+   practice test 2</a>&nbsp;&nbsp; <img src="images/star.gif" alt="Peer Evaluation Form IS443" width="37" height="28"><a href="Peer Evaluation FORM IS443.doc">Peer 
   Evaluation Form&nbsp;</a><br>
   <img src="images/star.gif" width="37" height="28">Downloads: <a href="Oracle_1.htm">(1) 
   SQL Tutorial </a><a href="ORACLE_Pitfalls.doc" tabindex="2" target="_self">(2) 
