--- a/bcis443_Fall_25_Flexible.htm
+++ b/bcis443_Fall_25_Flexible.htm
@@ -108,7 +108,7 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
       </tr>
       <tr> 
         <td colspan="3"><div align="center"><strong>Office Hours</strong>: Mon. 
-            Wed.  Fri. 12:00pm to 2:00 pm &amp; Tue 2:00 to 4:00pm or by 
+            Wed.   12:00pm to 2:00 pm &amp; Tue Thu. 2:00 to 4:00pm or by 
         appointment;&nbsp;Zoom  ID: https://minnstate.zoom.us/j/9511044838</div></td>
       </tr>
     </table>
