Updated WebSpace files after Dreamweaver edits

--- a/MSIA643Fall2025_New_Asyn.htm
+++ b/MSIA643Fall2025_New_Asyn.htm
@@ -107,7 +107,7 @@ font-family:Arial;color:blue'> 643 Database Security &amp; Auditing <o:p></o:p><
       </tr>
       <tr> 
         <td colspan="3"><div align="center"><strong>Zoom Office Hours</strong>: Mon. 
-            Wed.  12:00pm to 2:00 pm &amp; Tue, Thu. 2:00 to 4:00pm or by 
+            Wed.  Fri. 12:00pm to 2:00 pm &amp; Tue, Thu. 2:00 to 4:00pm or by 
         appointment; Zoom ID : https://minnstate.zoom.us/j/9511044838</div></td>
       </tr>
     </table>
