Updated WebSpace files after Dreamweaver edits

--- a/bcis443_Fall_25_Flexible.htm
+++ b/bcis443_Fall_25_Flexible.htm
@@ -104,7 +104,7 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
             https://www.stcloudstate.edu/its/services/academic/</a></div></td>
         <td><div align="center"><a href="mailto:JChen@StCloudState.edu"><span style='font-family:
   Arial'>Jchen@StCloudState.edu</span></a></div></td>
-        <td><div align="center"><a href="http://web.stcloudstate.edu/qjchen">https://jchenxn.github.io/WebSpace/</a></div></td>
+        <td><div align="center"><a href="https://jchenxn.github.io/WebSpace">https://jchenxn.github.io/WebSpace/</a></div></td>
       </tr>
       <tr> 
         <td colspan="3"><div align="center"><strong>Office Hours</strong>: Mon. 
