Updated WebSpace files after Dreamweaver edits

--- a/bcis443_Spr_26_Flexible.htm
+++ b/bcis443_Spr_26_Flexible.htm
@@ -182,15 +182,9 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
     No late program is accepted unless you can provide official document of the 
     extreme situation that prevented you from completing your project on time. 
     No excuse is accepted after the project deadline.</p>
-  <p><b>Group Projects: </b>You will work in groups of four to develop a database 
-    system for a hypothetical business, whose descriptions will be given to you 
-    in the 5<sup>th</sup> week. You may form your own group if you attend the class in-person or request to be assigned 
-    to a group after you get the group project assignment sheet. Your group will 
-    make an in-person or online presentation at the end of the semester to demonstrate your 
-    system. The presentation is limited to about 20 minutes.Your individual group 
-    project score = group project score adjusted by a peer evaluation factor.  Graduate students will be doing an extra assignment as part of GP#1. Unlike the first group project, the second group project  on PL/SQL coding is very small and does not require presentation.</p>
+  <p><b>Group Projects: </b>You will work in a group of no more than four people on two projects. The first one (GP#1) is to develop a database system for a hypothetical business, whose descriptions will be given to you in the 5th week. You will be randomly assigned to a group after you get the group project assignment sheet. Your group will make a recorded video presentation (presenters' video and PPS) at the end of the semester to demonstrate your system. The presentation is limited to about 30 to 40 minutes.Your individual group project score = group project score adjusted by a peer evaluation factor. Graduate students will be doing an extra assignment as part of GP#1. Your second group project (GP#2) on PL/SQL coding is much smaller and carries less weight.</p>
 
-  <p><b>Peer Evaluation: </b>The examinatio<font face="Times New Roman, Times, serif">ns 
+  <p><b>Exams &amp; Quizzes: </b>The examinatio<font face="Times New Roman, Times, serif">ns 
     cons</font>ist of multiple choice and short answer questions. Before taking 
     exam 1 &amp; 2, you may take on-line practice exams (see the course syllabus for links) 
     on the same subject matters as the actual exam. The scores of the practice 
@@ -229,8 +223,8 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
     </span></b>Cheating in any form will not be tolerated. Any student who cheats 
     on projects or during an examination or assists another student in cheating 
     will automatically fail the course. You are allowed to discuss ideas and problem 
-    solving strategies with your classmates. Copying the design or  code 
-    from a classmate constitutes a severe violation of academic integrity. All 
+    solving strategies with your classmates or using AI tools. Copying the design or  code 
+    from a classmate or AI&nbsp; constitutes a severe violation of academic integrity. All 
     parties involved will be punished. <strong>Unusally similar programs attract 
     intense scrutiny. </strong>Once a program comes under suspicion, the student 
     will be monitored closely. All cases of cheating will be reported to the Vice 
@@ -325,7 +319,7 @@ font-family:Arial;color:blue'><strong>Business School </strong><br>
       <tr>
         <th scope="row"><b><span style="font-family:Arial">11</span></b></th>
         <td><b><span style="font-family:Arial">Mar. 23-</span></b></td>
-        <td><b><span style="font-family:Arial">PL/SQL; No class on Tuesday</span></b></td>
+        <td><b><span style="font-family:Arial">PL/SQL; No class on Tuesday, the 24th</span></b></td>
         <td><b><span style="font-family:Arial"> Videos</span></b></td>
       </tr>
       <tr>
