Updated WebSpace files after Dreamweaver edits

--- a/LeftFrame.htm
+++ b/LeftFrame.htm
@@ -16,6 +16,7 @@
   </a>IS 544<br>
   <a href="BCIS443.htm" target="_parent"><br>
 </a><a href="MSIA643.htm" target="_new">MSIA 643</a></p>
+</a><a href="IA699_Thesis_Any_Semester.htm" target="_new">IA 699 Thesis</a></p>
 <p><a href="research.htm" target="_blank">Research</a></p>
 <p><a href="Funpictures.htm" target="_blank">Fun</a></p>
 <p><a href="https://www.youtube.com/watch?v=M1wLtAXDgqg" target="_parent">I Love America!</a></p>
